# csa-homework

fifth_homework/: CMakeLists.txt  README.md  main.cpp  output.txt
fifth_homework/entities/: rucksack.cpp
fifth_homework/entities/book/: book.cpp  book.h
fifth_homework/entities/closet/: closet.cpp  closet.h
fifth_homework/entities/record/: record.cpp  record.h
fifth_homework/entities/row/: row.cpp  row.h
fifth_homework/entities/rucksack/: rucksack.cpp  rucksack.h
fifth_homework/input/: input1.txt
fourth_homework/: README.md  generate_data.py  main.cpp  makefile  surface_sort.asm
fourth_homework/input-files/: input1.txt  input4.txt  random_input3.txt
fourth_homework/shapes/: parallelepiped.cpp  sphere.cpp  tetrahedron.cpp
second_homework/: CMakeLists.txt  README.md  container.cpp  container.h  generate_data.py  main.cpp
second_homework/input-files/: input2.txt  input5.txt  random_input3.txt
second_homework/output-files/: output1.txt  output2.txt  output4.txt  output5.txt  random_output3.txt
second_homework/report/: stats.info
second_homework/shapes/: parallelepiped.cpp  parallelepiped.h  shape.cpp  shape.h  sphere.cpp  sphere.h  tetrahedron.cpp  tetrahedron.h
third_homework/: README.md  container.py  generate_data.py  main.py
third_homework/input_files/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  random1.txt
third_homework/output_files/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  random1.txt
third_homework/report/: .time
third_homework/shapes/: __init__.py  parallelepiped.py  shape.py  sphere.py  tetrahedron.py
